# ME537-Project

./: .gitignore  .gitmodules  .gitmodules.save  README.md  Sim_Setup.txt  StartingUpBaxter.txt  baxter.sh  baxter_fk_position_data_no_object.npy  baxter_fk_position_data_w_object.npy  baxter_position_data.npy  baxter_position_data.txt  baxter_position_data_no_object.npy  baxter_position_data_w_object.npy  baxter_real_fk_position_data_w_object.npy  ik.m  part3_trial04.mat
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/baxter_examples/: JointSpringsExampleConfig.h
devel/include/baxter_interface/: GripperActionServerConfig.h  HeadActionServerConfig.h  PositionFFJointTrajectoryActionServerConfig.h  PositionJointTrajectoryActionServerConfig.h  (+1 more)
devel/lib/pkgconfig/: tf2.pc  (+30 more)
src/: .rosinstall
src/rad_baxter_limb/: CMakeLists.txt  package.xml
src/rad_baxter_limb/src/: baxter_left_dMdq_func.py  baxter_left_dyn_params.py  baxter_left_dynamics.py  baxter_right_dyn_params.py  baxter_right_dynamics.py  baxter_right_kinematics.py  new_baxter_left_dyn_params.py  new_baxter_left_dynamics.py  rad_baxter_limbc
src/rad_baxter_limb/src/ar_tag_0/: model.sdf
src/rad_baxter_limb/src/ar_tag_0/meshes/: ar_tag_0.dae
src/rad_baxter_limb/src/rad_baxter_limb/: Final_Project_Tips.py  Grabber.py  Main.py  baxter_butler.py  baxter_butler_plot.py  baxter_fk_position_data_no_object.npy  baxter_fk_position_data_w_object.npy  baxter_left_kinematics.py  baxter_position_data_no_object.npy  baxter_position_data_w_object.npy  baxter_real_fk_position_data_no_object.npy  baxter_real_fk_position_data_w_object.npy  baxter_right_kinematics.py  cv_functions.py  jtpart1.py  move_arm.py  offset_util.py  rad_baxter_limb.py  start_baxter.py  test_brk.py
src/rad_baxter_limb/src/rad_baxter_limb/data/: baxter_position_data_w_object.npy  baxter_real_fk_position_data_w_object.npy
src/rad_baxter_limb/src/rad_baxter_limb/robotics_lab_fresh_start/: offset_util.py  rad_baxter_limb.py
src/torque_controller/: CMakeLists.txt  package.xml  setup.py
src/torque_controller/msg/: imp_cmd.msg  k_cmd.msg  q_cmd.msg
src/torque_controller/src/: angle_test_cmd.py  left_arm_torque_controller.py  left_arm_torque_controller_cor.py  record_data.py  record_data_for_filtering.py  record_data_imped_mpc_comp.py  record_data_mpc_control.py  record_data_mpc_control_1_dof.py  record_data_mpc_control_1_dof_disturb.py  record_data_mpc_control_1_dof_s1.py  record_data_mpc_control_1_dof_s1_disturb.py  record_data_mpc_control_2_dof.py  record_data_no_control_1_dof.py  record_data_no_control_1_dof_disturb.py  record_data_no_control_1_dof_s1.py  record_data_no_control_1_dof_s1_disturb.py  record_data_no_control_2_dof.py  right_arm_torque_controller.py  torque_control.py  torque_control.py~  torque_control_cor.py  zero_cmd_ang_k_pub_cor.py
(+124 files in other folders)
