<?xml version="1.0"?>
<package>
  <name>torque_controller</name>
  <version>0.0.0</version>
  <description>The torque_controller package</description>


  <maintainer email="levi.rupert@byu.edu">Levi Rupert</maintainer>


  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/torque_controller</url> -->

  <author email="levi.rupert@byu.edu">Levi Rupert</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rad_baxter_limb</build_depend>
  <build_depend>baxter_interface</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rad_baxter_limb</run_depend>
  <run_depend>baxter_interface</run_depend>

  <export></export>
</package>